#6: Switched configuration of local and JDBC connection integration tests.