@@ -1,5 +1,6 @@
 package com.exasol.adapter.dialects.rls;
 
+import java.util.Collections;
 import java.util.Map;
 
 import org.junit.jupiter.api.Tag;
@@ -9,6 +10,6 @@ import org.junit.jupiter.api.Tag;
 class RowLevelSecurityJdbcIT extends AbstractRowLevelSecurityIT {
     @Override
     protected Map<String, String> getConnectionSpecificVirtualSchemaProperties() {
-        return Map.of("IS_LOCAL", "true");
+        return Collections.emptyMap();
     }
 }
